fix: fixed breadcrumbs on mobile

--- a/src/shared/core/breadcrumb/breadcrumb-component.module.scss
+++ b/src/shared/core/breadcrumb/breadcrumb-component.module.scss
@@ -1,30 +1,35 @@
 .breadcrumb {
   margin: 0;
-  padding: 16px 0 ;
+  padding: 16px 0;
   list-style-type: none;
   display: flex;
   align-items: center;
   font-size: 14px;
   margin: 0 -12px;
 
-  >li{
+  > li {
     position: relative;
-    >a, >span{
+    > a,
+    > span {
+      @media (max-width: $breakpoint-xsmall-max) {
+        font-size: 12px;
+        padding: 0 5px;
+      }
       display: flex;
       align-items: center;
       color: $global-color;
       text-decoration: none;
       padding: 0 10px;
-      svg{
+      svg {
         margin-left: 10px;
-        path{
-          stroke:$gray-light;
+        path {
+          stroke: $gray-light;
           fill: none;
         }
       }
     }
-    &:last-child{
-      span{
+    &:last-child {
+      span {
         color: $gray-light;
       }
     }
